// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mg-input-text Should render with args {
  label: 'label',
  identifier: 'identifier',
  readonly: true,
  value: 'blu'
}: 1`] = `
<mg-input-text value="blu">
  <mock:shadow-root>
    <div class="mg-input mg-input--readonly mg-input--text">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <strong>
          blu
        </strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args {
  label: 'label',
  identifier: 'identifier',
  tooltip: 'My Tooltip Message'
}: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <input aria-describedby="" id="identifier" maxlength="400" name="identifier" type="text">
          <mg-tooltip identifier="identifier-tooltip" message="My Tooltip Message">
            <mg-icon icon="info"></mg-icon>
          </mg-tooltip>
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { label: 'label', identifier: 'identifier' }: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <input aria-describedby="" id="identifier" maxlength="400" name="identifier" type="text">
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { label: 'label', identifier: 'identifier', labelHide: true }: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--text">
      <mg-label class="sr-only" identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <input aria-describedby="" id="identifier" maxlength="400" name="identifier" type="text">
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { label: 'label', identifier: 'identifier', labelOnTop: true }: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--label-on-top mg-input--text">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <input aria-describedby="" id="identifier" maxlength="400" name="identifier" type="text">
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should render with args { label: 'label', identifier: 'identifier', readonly: true }: 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="mg-input mg-input--readonly mg-input--text">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <strong></strong>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;

exports[`mg-input-text Should trigger events 1`] = `
<mg-input-text>
  <mock:shadow-root>
    <div class="is-focused mg-input mg-input--text">
      <mg-label identifier="identifier">
        label
      </mg-label>
      <div class="mg-input__input-container">
        <div class="mg-input__input-container__input">
          <input aria-describedby="identifier-character-left identifier-help-text" id="identifier" maxlength="400" name="identifier" type="text">
        </div>
        <mg-character-left identifier="identifier-character-left" maxlength="400"></mg-character-left>
        <div class="mg-input__input-container__help-text" id="identifier-help-text">
          My help text
        </div>
      </div>
    </div>
  </mock:shadow-root>
</mg-input-text>
`;
